--- a/3 - API_endpoint/requirements.txt
+++ b/3 - API_endpoint/requirements.txt
@@ -1,8 +1,13 @@
 fastapi 
 joblib
+xgboost==1.7.1
 uvicorn[standard]
 pydantic 
+scikit-learn==1.1.3
 typing 
 pandas==1.5.1
 gunicorn==20.1.0
+fsspec==2022.11.0
+s3fs==2022.11.0
+python-multipart
 
